# eiipm

./: 404.html  CHANGELOG.md  Cargo.toml  LICENSE  README.md  authoring_plugin.html  check_updates.html  clear_cache.html  commands.html  examples.html  index.html  install.sh  install_command.html  introduction.html  list_command.html  print.html  publishing_your_package.html  searchindex.js  searchindex.json  tips_n_tricks.html  toc.html  toc.js  uninstall_command.html  update_command.html
.github/workflows/: gh-pages.yml
docs/: book.toml
docs/src/: SUMMARY.md  authoring_plugin.md  check_updates.md  clear_cache.md  commands.md  examples.md  install_command.md  introduction.md  list_command.md  publishing_your_package.md  tips_n_tricks.md  uninstall_command.md  update_command.md
src/: git.rs  main.rs  opts.rs  schema.rs
src/functions/: add.rs  checkupdate.rs  clean.rs  clearcache.rs  init.rs  install.rs  list.rs  listcache.rs  mod.rs  purgecache.rs  remove.rs  search.rs  uninstall.rs  update.rs
src/git/: mod.rs
src/other/: confirm_action.rs  mod.rs  run_checks.rs
test/: plugins.toml
theme/: ewwii.css
tool/eiipm/: 404.html  commands.html  print.html  searchindex.js  tips_n_tricks.html  update_command.html
